# xtremax

./: .env.example  .gitignore  .pre-commit-config.yaml  404.html  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_REVIEW.md  CONTRIBUTING.md  Makefile  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  release-please-config.json
.claude/commands/: create-gh-issue.md  link-gh-issues.md  squash-commit.md
.github/: copilot-instructions.md  labeler.yml
.github/ISSUE_TEMPLATE/: bug.md  design.md  epic-theme.md  epic-wave.md  feature.md  research.md
.github/instructions/: docs-examples.instructions.md  python-coding.instructions.md
.github/scripts/: create-labels.sh  link-issues.sh
.github/workflows/: ci.yml  typecheck.yml
api/reference/: index.html
changelog/: index.html
contributing/: index.html
design_docs/: index.html
design_docs/api/: index.html
design_docs/api/components/: index.html
design_docs/api/models/: index.html
design_docs/api/primitives/: index.html
design_docs/architecture/: index.html
design_docs/boundaries/: index.html
design_docs/decisions/: index.html
design_docs/examples/: index.html
design_docs/examples/components/: index.html
design_docs/examples/integration/: index.html
design_docs/examples/models/: index.html
design_docs/examples/primitives/: index.html
design_docs/vision/: index.html
docs/: contributing.md  index.md
docs/api/: reference.md
docs/design_docs/: README.md  architecture.md  boundaries.md  decisions.md  vision.md
docs/design_docs/api/: README.md  components.md  models.md  primitives.md
docs/design_docs/examples/: README.md  components.md  integration.md  models.md  primitives.md
docs/notebooks/: evt_distributions_overview.ipynb  evt_frechet_heavy_tails.ipynb  evt_gevd_block_maxima.ipynb  evt_gpd_pot.ipynb  evt_nonstat_neural_ode.ipynb  evt_nonstat_parametric.ipynb  evt_nonstat_splines.ipynb  evt_quantile_regression_gpd.ipynb  evt_weibull_bounded.ipynb  example_demo.ipynb  example_demo.py  hawkes_from_scratch_and_numpyro.ipynb  hawkes_spatiotemporal_from_scratch_and_numpyro.ipynb  hpp_from_scratch_and_numpyro.ipynb  hpp_spatial_from_scratch_and_numpyro.ipynb  hpp_spatiotemporal_from_scratch_and_numpyro.ipynb  ipp_from_scratch_and_numpyro.ipynb  ipp_spatial_from_scratch_and_numpyro.ipynb  ipp_spatiotemporal_from_scratch_and_numpyro.ipynb  latent_ode_ipp.ipynb  marked_from_scratch_and_numpyro.ipynb  marked_spatial_from_scratch_and_numpyro.ipynb  marked_spatiotemporal_from_scratch_and_numpyro.ipynb  point_processes_temporal.ipynb  renewal_from_scratch_and_numpyro.ipynb  thinning_from_scratch_and_numpyro.ipynb
docs/templates/: wave-backlog.md
notebooks/evt_distributions_overview/: index.html
notebooks/evt_weibull_bounded/: index.html
notebooks/example_demo/: index.html
notebooks/hawkes_from_scratch_and_numpyro/: index.html
notebooks/hawkes_spatiotemporal_from_scratch_and_numpyro/: index.html
notebooks/hpp_from_scratch_and_numpyro/: index.html
notebooks/hpp_spatial_from_scratch_and_numpyro/: index.html
notebooks/hpp_spatiotemporal_from_scratch_and_numpyro/: index.html
notebooks/ipp_from_scratch_and_numpyro/: index.html
notebooks/ipp_spatial_from_scratch_and_numpyro/: index.html
notebooks/ipp_spatiotemporal_from_scratch_and_numpyro/: index.html
notebooks/latent_ode_ipp/: index.html
notebooks/marked_from_scratch_and_numpyro/: index.html
notebooks/marked_spatial_from_scratch_and_numpyro/: index.html
notebooks/marked_spatiotemporal_from_scratch_and_numpyro/: index.html
notebooks/renewal_from_scratch_and_numpyro/: index.html
notebooks/thinning_from_scratch_and_numpyro/: index.html
search/: search_index.json
src/xtremax/: __init__.py  _rng.py
src/xtremax/distributions/: __init__.py  frechet.py  gevd.py  gpd.py  gumbel.py  weibull.py
src/xtremax/extraction/: __init__.py  block_maxima.py  decluster.py  quantile_regression.py  threshold.py
src/xtremax/point_processes/: __init__.py  _adapters.py  _domain.py  _history.py  _integration.py  _integration_spatial.py  _integration_spatiotemporal.py
src/xtremax/point_processes/distributions/: __init__.py  hawkes.py  hawkes_spatiotemporal.py  hpp_spatial.py  hpp_spatiotemporal.py  ipp_spatial.py  ipp_spatiotemporal.py  marked.py  marked_spatial.py  marked_spatiotemporal.py  renewal.py  temporal.py  thinning.py
src/xtremax/point_processes/operators/: __init__.py  hawkes.py  hawkes_spatiotemporal.py  hpp_spatial.py  hpp_spatiotemporal.py  ipp_spatial.py  ipp_spatiotemporal.py  marked.py  marked_spatial.py  marked_spatiotemporal.py  renewal.py  temporal.py  thinning.py
src/xtremax/point_processes/primitives/: __init__.py  diagnostics.py  diagnostics_spatial.py  hawkes.py  hawkes_spatiotemporal.py  hpp.py  hpp_spatial.py  hpp_spatiotemporal.py  ipp.py  ipp_spatial.py  ipp_spatiotemporal.py  marked.py  marked_spatial.py  marked_spatiotemporal.py  renewal.py  thinning.py
src/xtremax/primitives/: __init__.py  frechet.py  gev.py  gpd.py  gumbel.py  weibull.py
src/xtremax/simulations/: __init__.py  extremes.py  spatial.py  temporal.py
tests/: test_distributions.py  test_extraction.py  test_mypackage.py  test_primitives.py  test_simulations.py  test_xtremax.py
tests/point_processes/: test_cross_family_invariants.py  test_diagnostics.py  test_distributions.py  test_distributions_extensions.py  test_distributions_spatial.py  test_distributions_spatiotemporal.py  test_domain.py  test_history.py  test_integration.py  test_integration_spatial.py  test_integration_spatiotemporal.py  test_operators.py  test_operators_extensions.py  test_operators_spatial.py  test_operators_spatiotemporal.py  test_primitives_hawkes.py  test_primitives_hawkes_spatiotemporal.py  test_primitives_hpp.py  test_primitives_hpp_spatial.py  test_primitives_hpp_spatiotemporal.py  test_primitives_ipp.py  test_primitives_ipp_spatial.py  test_primitives_ipp_spatiotemporal.py  test_primitives_marked.py  test_primitives_marked_spatial.py  test_primitives_renewal.py  test_primitives_thinning.py  test_review_regressions.py
