[project]
name = "xtremax"
version = "0.1.0"
description = "JAX/NumPyro-native library for extreme value modeling — custom distributions, Bayesian models, and spatiotemporal data extraction."
authors = [
    {name="J. Emmanuel Johnson", email="jemanjohnson34@gmail.com"},
]
license = { file = "LICENSE" }
readme = "README.md"
keywords = []
requires-python = ">=3.12"
classifiers = [
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Natural Language :: English",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Science/Research",
    "Development Status :: 2 - Pre-Alpha",
]
dependencies = [
    # numpyro 0.20.x uses jax internals that were removed in jax >= 0.7.
    # Pin jax/jaxlib below that ceiling until numpyro catches up.
    "jax>=0.4,<0.7",
    "jaxlib>=0.4,<0.7",
    "numpyro>=0.15",
    "xarray>=2024.0",
    "numpy>=1.26",
    "scipy>=1.11",
    "pandas>=2",
    "jaxtyping>=0.2",
    "einops>=0.7",
    "equinox>=0.11",
]

[project.optional-dependencies]
threshold = [
    "scikit-learn>=1.3",
]

[project.urls]
Repository = "https://github.com/jejjohnson/xtremax"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "pre-commit>=4.5.1",
]
lint = [
    "ruff>=0.15.10",
]
typecheck = [
    "ty>=0.0.30",
]
docs = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.6",
    "mkdocstrings[python]>=1.0.3",
    "mkdocs-jupyter>=0.26.2",
    "jupytext>=1.19.1",
    "ipykernel>=7.2.0",
    # matplotlib + watermark used by the example notebooks during local
    # re-execution. The guarded watermark cell in each notebook no-ops
    # if the package is missing, but installing it here lets the version
    # readout actually print under `nbconvert --execute`.
    "matplotlib>=3.8",
    "watermark>=2.4",
    # pygments 2.20.0 dropped the None -> '' coercion for HtmlFormatter(filename=...),
    # but pymdownx.highlight 10.21.x still passes the untitled-code-block title
    # through as None. Pin until a fixed pymdown-extensions release ships (#38).
    "pygments>=2.19,<2.20",
    # Latent-ODE notebook only: diffrax for the ODE solver, interpax for the
    # observation-path interpolation, optax for training. Not used elsewhere
    # in the package, so they live in the docs group rather than main deps.
    "diffrax>=0.7.2",
    "interpax>=0.3.14",
    "optax>=0.2.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/xtremax"]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
ignore = [
    "E402", "E721", "E731", "E741",
    # RUF002/RUF003: we use Greek letters (μ, σ, ξ, γ) in math docstrings/comments.
    "RUF002",
    "RUF003",
    # RUF012: NumPyro's Distribution interface requires class-level dict/list
    # attributes (`arg_constraints`, `reparametrized_params`).
    "RUF012",
]

[tool.ruff.lint.per-file-ignores]
# Jupytext notebook sources use single-line paragraphs in markdown cells
# and sometimes have long Colab-badge URLs; keep those unwrapped.
# RUF001 triggers on typographic en/em dashes used in narrative prose.
"docs/notebooks/*.py" = ["E501", "RUF001", "B905"]
"docs/notebooks/*.ipynb" = ["E501", "RUF001", "B905"]

[tool.ruff.lint.isort]
combine-as-imports = true
lines-after-imports = 2

[tool.ty.environment]
python-version = "3.12"

[tool.ty.rules]
# Broad ignores over the ported NumPyro distribution classes and scipy-backed
# simulation helpers. These snippets predate ty's scrutiny; tightening per-rule
# is a v0.1 polish task.
unsupported-operator = "ignore"
invalid-argument-type = "ignore"
invalid-method-override = "ignore"
unresolved-attribute = "ignore"
invalid-return-type = "ignore"
not-iterable = "ignore"
# JAX scan/vmap outputs: ty doesn't narrow to ArrayLike; subscripts
# and tuple unpacking on JAX traced outputs are structurally fine at
# runtime but opaque to the type inferencer.
not-subscriptable = "ignore"
invalid-assignment = "ignore"
# NumPyro's `constraints.interval` is a class (factory); ty reads its
# `__call__` as `(self, x)` rather than the constructor, flagging two-arg
# construction. This is a stub/type-inference mismatch, not a real bug.
too-many-positional-arguments = "ignore"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src/xtremax --cov-report=term-missing --cov-report=xml:coverage.xml"

[tool.coverage.run]
source = ["src/xtremax"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
# Ported snippets ship with smoke tests only; raise toward 80% as v0.1 matures.
fail_under = 40
